--- a/config/config.json
+++ b/config/config.json
@@ -2,9 +2,12 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "database_development",
+    "database": "ambrosia",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mariadb",
+    "createDatabaseIfNotExists": true,
+    "logging": false,
+    "port": "3306"
   },
   "test": {
     "username": "root",
