--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "ambrozija_hacka_hakaton",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install",
     "start": "node app.js"
   },
